[package]
name = "aho-nnotation"
version = "0.1.0"
authors = ["Eonm <eon@abes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
colored = "2.0.0"
log = "0.4.11"
env_logger = "0.8.1"
clap = "2.33.3"
glob = "0.3.0"

[profile.release]
opt-level = 3